[gd_scene load_steps=2 format=2]

[ext_resource path="res://Counter.gd" type="Script" id=1]

[node name="Panel" type="Panel"]
margin_left = 263.0
margin_top = 87.0
margin_right = 765.0
margin_bottom = 492.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 62.2277
margin_top = 150.466
margin_right = 447.228
margin_bottom = 244.466
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonReset" type="Button" parent="."]
margin_left = 53.0
margin_top = 300.0
margin_right = 451.0
margin_bottom = 378.0
size_flags_stretch_ratio = 0.0
text = "Reset value"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonDecrease" type="Button" parent="."]
margin_left = 25.4737
margin_top = 24.4737
margin_right = 231.474
margin_bottom = 102.474
size_flags_stretch_ratio = 0.0
text = "Decrease value"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonIncrease" type="Button" parent="."]
margin_left = 271.79
margin_top = 24.4737
margin_right = 477.79
margin_bottom = 102.474
size_flags_stretch_ratio = 0.0
text = "Increase value"
__meta__ = {
"_edit_use_anchors_": false
}
